# Puppy_workspace

./: .gitignore  Detalle_Semanal_ConTendencias_20260513.xlsx  GUIA_GIT_GITHUB.md  Git_GitHub_Equipo_Walmart.pptx  README.md  UNION_ALL_PxQ.sql  bq_comp_sample.py  bq_inspect_json.py  bq_stage2_export.py  bq_stage2_validation.py  build_out.txt  build_report.py  build_union_all.py  chart_gen.py  check_new_csv.py  check_sell_qty.py  crear_presentacion.py  dashboard_css.py  dashboard_js.py  dashboard_js_outliers.py  datos_competidor_star.csv  debug_data.py  debug_data_out.txt  debug_js.py  debug_out.txt  extract_queries.py  gen_detalle_semanal_excel.py  generate_report.py  git-github-equipo.html  html_assembler.py  html_builder.py  merge_drivers_json.py  prcng_info_store4076_sw22_cat6894_6987.csv  prcng_info_store4076_sw22_cat894_6987.csv  presentacion_IA_pricing.html  presentacion_escalera_precios.html  presentacion_logica_pxq.html  preview_results.py  pricing_analysis.py  pricing_analysis_6894_6987.py  (+28 more)
bitacora-cambios/: .env.example  .gitignore  main.py  pyproject.toml  seed.py
bitacora-cambios/app/: auth.py  config.py  database.py  email_service.py  models.py
bitacora-cambios/app/routers/: aprobaciones.py  auth.py  pages.py  tareas.py
bitacora-cambios/templates/: base.html  dashboard.html  login.html
bitacora-cambios/templates/aprobaciones/: lista.html  (+1 more)
pricing-platform/: .gitignore  main.py  pyproject.toml  seed.py
pricing-platform/app/: auth.py  config.py  database.py  models.py  templates.py  utils.py
pricing-platform/templates/: base.html  login.html
(+94 files in other folders)
